hphp/test/quick/dv_ai.php.expectf

Fatal error: Default value for parameter a1 with type Int64 needs to have the same type as the type hint HH\AnyArray in %s on line 3
